# startup-base

./: DECISIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DECISIONS.md  QUALITY.md  SETUP.md  STRUCTURE.md
